--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -1,54 +1,54 @@
 [bootstrap]
-routes.main.route                   		= "/"
+routes.main.route                   		= ""
 routes.main.defaults.controller     		= "index"
 routes.main.defaults.action         		= "index"
 routes.main.defaults.module         		= "default"
 
-routes.main_pagination.route 				= "/:page"
+routes.main_pagination.route 				= ":page"
 routes.main_pagination.defaults.controller 	= "index"
 routes.main_pagination.defaults.action 		= "index"
 routes.main_pagination.defaults.module     	= "default"
 routes.main_pagination.defaults.page 		= 1
 routes.main_pagination.reqs.page 			= \d+
 
-routes.login.route                  = "/login"
+routes.login.route                  = "login"
 routes.login.defaults.controller    = "auth"
 routes.login.defaults.action        = "login"
 routes.login.defaults.module        = "default"
 
-routes.logout.route                 = "/logout"
+routes.logout.route                 = "logout"
 routes.logout.defaults.controller   = "auth"
 routes.logout.defaults.action       = "logout"
 routes.logout.defaults.module       = "default"
 
-routes.articles.route 							= "/articles"
+routes.articles.route 							= "articles"
 routes.articles.defaults.controller 			= "article"
 routes.articles.defaults.action 				= "index"
 routes.articles.defaults.module     			= "default"
 
-routes.articles_pagination.route 				= "/articles/:page"
+routes.articles_pagination.route 				= "articles/:page"
 routes.articles_pagination.defaults.controller 	= "article"
 routes.articles_pagination.defaults.action 		= "index"
 routes.articles_pagination.defaults.module      = "default"
 routes.articles_pagination.defaults.page 		= 1
 routes.articles_pagination.reqs.page 			= \d+
 
-routes.tag.route 							= "/tag/:tag"
+routes.tag.type 							= "Zend_Controller_Router_Route_Regex"
+routes.tag.route 							= "tag/([\w-]+)"
 routes.tag.defaults.controller 				= "tag"
 routes.tag.defaults.action 					= "index"
 routes.tag.defaults.module      			= "default"
-routes.tag.reqs.tag 						= \w+
+routes.tag.map.tag 							= 1
 
-routes.tag_pagination.route 				= "/tag/:tag/:page"
+routes.tag_pagination.type 					= "Zend_Controller_Router_Route_Regex"
+routes.tag_pagination.route 				= "tag/([\w-]+)/([\d]+)"
 routes.tag_pagination.defaults.controller 	= "tag"
 routes.tag_pagination.defaults.action 		= "index"
 routes.tag_pagination.defaults.module      	= "default"
-routes.tag_pagination.defaults.page 		= 1
-routes.tag_pagination.reqs.page 			= \d+
-routes.tag_pagination.reqs.tag 				= \w+
+routes.tag_pagination.map.tag 				= 1
+routes.tag_pagination.map.page 				= 2
 
-
-routes.author.route 				= "/author/:author"
+routes.author.route 				= "author/:author"
 routes.author.defaults.controller 	= "author"
 routes.author.defaults.action 		= "view"
 routes.author.defaults.module      	= "default"
